# Agentic-RAG-Prerequisite-Course-Planning-Assistant

./: .env.example  .gitignore  Readme.md  count_words.py  count_words2.py  main.py  phase2_fix.py  phase2_ingestion.py  pyproject.toml
chroma_db/: chroma.sqlite3
data/: test_run_outputs.md
data/Policies/: Open-Grading-Policy.txt  graduation-policy.txt
data/Program/: degree_reqirement.txt
data/processed/: clean_policy.json  clean_program.json  full_cleaned_documents.json  full_cleaned_documents_with_logic.json  gradio_chat_history.json  ingestion_report.md  phase5_demo_output.json  sample_course_plan.json  sample_student_phase3.json
src/agents/: retriever_agent.py
src/graph/: graph.py  state.py
src/ingestion/: constants.py  document_processor.py  ingest.py  metadata_extractor.py  pdf_parser.py  report.py
src/planning/: __init__.py  cli.py  constants.py  engine.py  explainer.py  gradio_app.py  history_store.py  intake.py  loader.py
src/prompts/: groq_course_extraction.txt  llamaparse_course_instructions.txt  parsing_instructions.txt  phase3_prereq_parser.txt  phase4_explanation_prompt.txt  phase4_intake_prompt.txt  phase5_grounded_explanation_prompt.txt  pure_rag_planner_prompt.txt
src/rag/: __init__.py  chunking.py  embeddings.py  retriever.py  vectorstore.py
src/reasoning/: __init__.py  cli.py  constants.py  evaluator.py  parser.py  (+1 more)
temp_chroma/: chroma.sqlite3
tests/: phase4.md  phase5_demo.py  run_test_suite.py  test_gradio_demo.py  test_phase2_ingestion.py  test_phase3_reasoning.py  test_phase4_planning.py  test_phase5_grounding.py  testing.md
(+7 files in other folders)
